<resources>
    <string name="app_name">Event Planner</string>
    <string name="signin">SIGN IN</string>
    <string name="home">Home</string>
    <string name="register">Register</string>
    <string name="invite">Invite</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="photo">CHOOSE PROFILE PHOTO</string>
    <string name="add_photos">ADD PHOTOS (OPTIONAL)</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="company">Company</string>
    <string name="dont_have_account">Don"'"t have an account</string>
    <string name="description">Description</string>
    <string name="select_registration_type">Select registration type</string>
    <string name="register_as_eo">Register as Event Organizer</string>
    <string name="register_as_sp">Register as Service Provider</string>
    <string name="max_participants">Max Participants</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="events">Events</string>
    <string name="dashboard">Dashboard</string>
    <string name="products">Products</string>
    <string name="event_types">Event Types</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="my_products">My Products</string>
    <string name="shop">Shop</string>
    <string name="skip_login">Login as a guest</string>
    <string name="events_merchandise">Event Planner</string>
    <string name="top">Top</string>
    <string name="choose_merchandise">Choose merchandise</string>
    <string name="merchandise_details">Merchandise Details</string>
    <string name="all">All</string>
    <string name="my">My</string>
    <string name="top_merchandise">Top Products/Services</string>
    <string name="top_events">Top Events</string>
    <string name="my_events">My Events</string>
    <string name="fav">Favorite</string>
    <string name="favorite_merchandise">Favorite Merchandise</string>
    <string name="favorite_products">Favorite Products</string>
    <string name="favorite_services">Favorite Services</string>
    <string name="agenda">Agenda</string>
    <string name="see_details">See details</string>
    <string name="all_events">All Events</string>
    <string name="all_merchandise">All Products/Services</string>
    <string name="filters">Filters</string>
    <string name="sort_merchandise_by">Sort Products/Services by</string>
    <string name="sort_events">Sort Events by</string>
    <string name="sort_events_by_title">Title</string>
    <string name="sort_events_by_description">Description</string>
    <string name="sort_events_by_city">City</string>
    <string name="sort_events_by_date">Date</string>
    <string name="sort_events_by_type">Type</string>
    <string name="sort_merchandise_by_price">Price</string>
    <string name="sort_merchandise_by_discount">Discount</string>
    <string name="sort_merchandise_by_rating">Rating</string>
    <string name="services">Services</string>
    <string name="event_filters">Event Filters</string>
    <string name="type">Type</string>
    <string name="service_filters">Service Filters</string>
    <string name="price_min">Price Min</string>
    <string name="price_max">Price Max</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="duration_min">Duration Min</string>
    <string name="duration_max">Duration Max</string>
    <string name="product_filters">Product Filters</string>
    <string name="apply_filters">Apply filters</string>
    <string name="edit">Edit</string>
    <string name="follow">Follow</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="stats">Stats</string>
    <string name="show_hide">Show/Hide</string>
    <string name="enable_disable">Enable/Disable</string>
    <string name="deactivate">Deactivate</string>
    <string name="activate">Activate/Deactivate</string>
    <string name="reserve">Reserve</string>
    <string name="my_services">My Services</string>
    <string name="new_service">New Service</string>
    <string name="edit_service">Edit Service</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="add_event_type">Add Event Type</string>
    <string name="edit_event_type">Edit Event Type</string>
    <string name="specificity">Specificity</string>
    <string name="discount">Discount</string>
    <string name="recommend_category">Recommend new category</string>
    <string name="date">Date</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="latitude">Latitude</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="add_activity">Add Activity</string>
    <string name="edit_activity">Edit Activity</string>
    <string name="longitude">Longitude</string>
    <string name="reservation_deadline">Reservation Deadline</string>
    <string name="cancelation_deadline">Cancelation Deadline</string>
    <string name="service_photos">Service photos</string>
    <string name="event_type">Choose event type</string>
    <string name="visible">Visible</string>
    <string name="delete">Delete</string>
    <string name="available">Available</string>
    <string name="public1">Public</string>
    <string name="private1">Private</string>
    <string name="add_event">Add Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="min_Duration">min Duration</string>
    <string name="max_duration">max Duration</string>
    <string name="reservation_Deadline">Reservation Deadline</string>
    <string name="cancellation_deadline">Cancellation Deadline</string>
    <string name="in_days">In Days</string>
    <string name="reservation_type">Choose reservation type</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
    <string name="change_password">Change Password</string>
    <string name="submit">Submit</string>
    <string name="old_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="min">Min Duration</string>
    <string name="max">Max Duration</string>
    <string name="duration">Duration</string>
    <string name="category_change">Category can\'t be changed</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string-array name="category_array">
        <item>Category 1</item>
        <item>Category 2</item>
        <item>Category 3</item>
        <item>Category 4</item>
    </string-array>
    <string-array name="event_type_array">
        <item>Tech Conference</item>
        <item>Orgijanje</item>
        <item>Rucak</item>
        <item>Seminar</item>
    </string-array>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="plus">+</string>
    <string name="Start_Date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="reset_filter_values">Reset filters</string>
    <string name="rating">Rating</string>
    <string name="book_reservation">Book Reservation</string>
    <string name="taken_timeslots">Taken timeslots:</string>
    <string name="reserve_service">Reserve Service</string>
    <string name="start_time">Start Time</string>
    <string name="end_time_optional">End Time (Optional)</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="reviews">Reviews</string>
    <string name="user_reports">User reports</string>
    <string name="favorite_events">Favorite Events</string>
    <string name="followed_events">Followed Events</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="messenger">Messenger</string>
    <string name="chat_with_organizer">Chat with organizer</string>
    <string name="type_a_message">Type a message</string>
    <string name="send_message">Send message</string>
    <string name="approved_categories">Approved Categories</string>
    <string name="pending_categories">Pending Categories</string>
    <string name="category_that_will_be_replaced">Category that will be replaced:</string>
    <string name="buy">Buy</string>
    <string name="buy_product">Buy Product</string>
    <string name="select_event">Select event</string>
</resources>