<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_title"
        android:title="@string/sort_events_by_title" />

    <item
        android:id="@+id/menu_description"
        android:title="@string/sort_events_by_description" />

    <item
        android:id="@+id/menu_specificity"
        android:title="@string/specificity" />

    <item
        android:id="@+id/menu_price"
        android:title="@string/price" />

    <item
        android:id="@+id/menu_discount"
        android:title="@string/discount" />

    <item
        android:id="@+id/menu_type"
        android:title="@string/type" />

    <item
        android:id="@+id/menu_category"
        android:title="@string/category" />

    <item
        android:id="@+id/menu_rating"
        android:title="@string/rating" />
</menu>