<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">
    <EditText
        android:id="@+id/edited_price"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/price"/>
    <EditText
        android:id="@+id/edited_discount"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/discount"/>
    <Button
        android:id="@+id/update_price_list_item_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/submit"/>
</LinearLayout>