<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterodScreenActivity">
    <!-- Header section with background color and user icon -->
    <LinearLayout
        android:id="@+id/iconContainer"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/primary_color"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Person Icon -->
        <ImageView
            android:id="@+id/personIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/add_user"
        />
    </LinearLayout>

    <!-- Form Fields -->
<EditText
android:id="@+id/editTextName"
android:layout_width="0dp"
android:layout_height="48dp"
android:hint="@string/name"
    android:layout_marginTop="10dp"
app:layout_constraintTop_toBottomOf="@id/iconContainer"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.5"
app:layout_constraintWidth_percent="0.9" />

<EditText
android:id="@+id/editTextSurname"
android:layout_width="0dp"
android:layout_height="48dp"
android:hint="@string/surname"
app:layout_constraintTop_toBottomOf="@id/editTextName"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.5"
app:layout_constraintWidth_percent="0.9" />

<EditText
android:id="@+id/editTextAddress"
android:layout_width="0dp"
android:layout_height="48dp"
android:hint="@string/address"
app:layout_constraintTop_toBottomOf="@id/editTextSurname"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.5"
app:layout_constraintWidth_percent="0.9" />

<EditText
android:id="@+id/editTextPhone"
android:layout_width="0dp"
android:layout_height="48dp"
android:hint="@string/phone"
android:inputType="phone"
app:layout_constraintTop_toBottomOf="@id/editTextAddress"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.5"
app:layout_constraintWidth_percent="0.9" />

<EditText
android:id="@+id/editTextEmail"
android:layout_width="0dp"
android:layout_height="48dp"
android:hint="@string/email"
android:inputType="textEmailAddress"
app:layout_constraintTop_toBottomOf="@id/editTextPhone"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.5"
app:layout_constraintWidth_percent="0.9" />

<EditText
android:id="@+id/editTextPassword"
android:layout_width="0dp"
android:layout_height="48dp"
android:hint="@string/password"
android:inputType="textPassword"
app:layout_constraintTop_toBottomOf="@id/editTextEmail"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.5"
app:layout_constraintWidth_percent="0.9" />

<EditText
android:id="@+id/editTextConfirmPassword"
android:layout_width="0dp"
android:layout_height="48dp"
android:hint="@string/confirmPassword"
android:inputType="textPassword"
app:layout_constraintTop_toBottomOf="@id/editTextPassword"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.5"
app:layout_constraintWidth_percent="0.9" />

    <Button
        android:id="@+id/choosePhotosButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextConfirmPassword"
        app:layout_constraintWidth_percent="0.9" />

<Button
android:id="@+id/createAccountButton"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:text="@string/register"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.5"
app:layout_constraintWidth_percent="0.9" />
</androidx.constraintlayout.widget.ConstraintLayout>